Added initial testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ project(connectX VERSION 1.0.0.0)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+include(CTest)
+
 include_directories(include)
 include_directories("${PROJECT_BINARY_DIR}/include")
 add_subdirectory(include)
@@ -12,4 +14,7 @@ add_subdirectory(src)
 add_executable(connectX app/main.cpp)
 target_link_libraries(connectX connectX_lib)
 
-install(TARGETS connectX DESTINATION "${CMAKE_CURRENT_LIST_DIR}/bin")
+# Conditionally add tests
+if (BUILD_TESTING)
+  add_subdirectory(tests)
+endif()
