Added IOController, added unit tests for IOController

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,6 @@ add_library(connectX_lib
   BoardProxy.cpp
   ControllerProxy.cpp 
   RefereeProxy.cpp
-  DenseBoard.cpp 
+  DenseBoard.cpp
+  IOController.cpp
   Game.cpp)
