Added vector inequality expressions nad tests

--- a/tests/vector_expressions/CMakeLists.txt
+++ b/tests/vector_expressions/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(testTargets 
   VecExEqualTester.cpp
+  VecExInequalTester.cpp
   VecExNotTester.cpp
   VecExNotEqualTester.cpp
   VecExSumTester.cpp
