Added min and max vector operations

--- a/tests/vector_expressions/CMakeLists.txt
+++ b/tests/vector_expressions/CMakeLists.txt
@@ -10,6 +10,7 @@ set(testTargets
   VecExDivTester.cpp
   VecExScalarTester.cpp
   VecExChainedOperationTester.cpp
+  VecExMinMaxTester.cpp
 )
 
 set(testSources
